--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "sass src/styles/main.scss build/main.css --watch"
+    "dev": "sass src/styles/main.scss build/main.css --watch"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bootstrap-icons": "^1.11.3"
+  }
 }
